Alg. & Listings style changes. Fixes #8

--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -71,45 +71,30 @@ Machine Learning.}
 \pagenumbering{arabic}
 
 % \input{Chapters/printTest.tex}
-\chapter*{Introduction}
-% \include{Chapters/0-Intro}
+% \include{Chapters/Intro}
 
 \part{Foundations}
 
-	\chapter{Setting the stage}
 	% \include{Chapters/Motivation}
-
-	\chapter{Probability Theory}
-
-	\chapter{Stochastic Processes \& Markov Decision Processes}
 	% \include{Chapters/Stochastic}
-
-	\chapter{Optimization Theory}
-
-	\chapter{Supervised Machine Learning}
-	% \include{Chapters/SupervisedLearning}
-
-	\chapter{Reinforcement Learning}
+	% \chapter{Optimization Theory}
+	\include{Chapters/SupervisedLearning}
 	% \include{Chapters/ReinforcementLearning}
 
 \cleardoublepage
 \part{Approximate solutions to the Reinforcement Learning 
 Problem}
 
-	\chapter{Approximate Linear Programming}
-	\include{Chapters/ApproximateLinearP}
+	% \include{Chapters/ApproximateLinearP}
+	% \include{Chapters/PropertiesGuarantees}
 
-	\chapter{Properties and performance guarantees}
-	\include{Chapters/PropertiesGuarantees}
-
-% Aqui todos los resultados de Farias que menciona LPinRL.
+	% Aqui todos los resultados de Farias que menciona LPinRL.
 
 \cleardoublepage
 \part{Applications to Supervised Machine Learning}
 	\appendix
 
-	\chapter{Simulating Miniopoly}
-	% \include{Chapters/MiniopolySim}
+	\include{Chapters/MiniopolySim}
 
 \nocite{*}
 \cleardoublepage
