--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -169,6 +169,7 @@
 \renewcommand{\L}{\mathcal{L}}
 \newcommand{\1}{\mathds{1}}
 \let\vec\mathbf
+\renewcommand\qedsymbol{\large\color{auroraRed}{$\blacksquare$}}
 
 %%===========================%
 %% Theorem-like Environments %
