--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -55,8 +55,6 @@ Machine Learning.}
 \include{FrontBackMatter/Dedication} \cleardoublepage
 \include{FrontBackMatter/Acknowledgments} \cleardoublepage
 \include{FrontBackMatter/Abstract} \cleardoublepage
-% \include{FrontBackmatter/Foreword}
-% Foreword perhaps...
 
 \tableofcontents
 \listofalgorithms
@@ -71,27 +69,26 @@ Machine Learning.}
 \pagenumbering{arabic}
 
 % \input{Chapters/printTest.tex}
-% \include{Chapters/Intro}
+\include{Chapters/Intro}
 
 \part{Foundations}
+\label{part:I}
 
-	% \include{Chapters/Motivation}
-	% \include{Chapters/Stochastic}
-	% \chapter{Optimization Theory}
+	\include{Chapters/Motivation}
+	\include{Chapters/Stochastic}
+	\include{Chapters/OptimizationTheory}
 	\include{Chapters/SupervisedLearning}
-	% \include{Chapters/ReinforcementLearning}
+	\include{Chapters/ReinforcementLearning}
 
-\cleardoublepage
-\part{Approximate solutions to the Reinforcement Learning 
-Problem}
+\part{Approximate solutions to the Reinforcement Learning Problem}
+\label{part:II}
 
-	% \include{Chapters/ApproximateLinearP}
-	% \include{Chapters/PropertiesGuarantees}
+	\include{Chapters/ApproximateLinearP}
+	\include{Chapters/PropertiesGuarantees}
 
-	% Aqui todos los resultados de Farias que menciona LPinRL.
-
-\cleardoublepage
 \part{Applications to Supervised Machine Learning}
+\label{part:III}
+
 	\appendix
 
 	\include{Chapters/MiniopolySim}
