Primera seccion de CARTasRLP completa

--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -85,7 +85,7 @@
 \part{Approximate solutions to the Reinforcement Learning Problem}
 \label{part:II}
 
-	% \include{Chapters/ApproximateLinearP}
+	\include{Chapters/ApproximateLinearP}
 	% \include{Chapters/PropertiesGuarantees}
 
 \part{Applications to Supervised Machine Learning}
