--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -71,7 +71,7 @@
 \pagestyle{plain}
 \pagenumbering{arabic}
 
-% \include{Chapters/Intro}
+\include{Chapters/Intro}
 
 \part{Foundations}
 \label{part:I}
@@ -79,25 +79,24 @@
 	% \include{Chapters/Motivation}
 	% \include{Chapters/Stochastic}
 	% \include{Chapters/OptimizationTheory}
-	\include{Chapters/SupervisedLearning}
-	% \include{Chapters/ReinforcementLearning}
+	% \include{Chapters/SupervisedLearning}
+	\include{Chapters/ReinforcementLearning}
 
 \part{Approximate solutions to the Reinforcement Learning Problem}
 \label{part:II}
 
-	\include{Chapters/ApproximateLinearP}
+	% \include{Chapters/ApproximateLinearP}
 	% \include{Chapters/PropertiesGuarantees}
-
+	
 \part{Applications to Supervised Machine Learning}
 \label{part:III}
 
-	\include{Chapters/CARTasRLP}
+	% \include{Chapters/CARTasRLP}
 
 \appendix
 \addcontentsline{toc}{part}{Appendices}
 
-
-	\include{Chapters/MiniopolySim}
+	% \include{Chapters/MiniopolySim}
 
 \nocite{*}
 \printbibliography
