Correcciones de Andreas + Probability appendix

--- a/escrito/BachelorsThesis.bib
+++ b/escrito/BachelorsThesis.bib
@@ -82,14 +82,14 @@
 @thesis{farias2002thesis,
   type = {phdthesis},
   title = {The {{Linear Programming Approach}} to {{Approximate Dynamic Programming}}: {{Theory}} and {{Application}}},
-  author = {family=Pucci, given=family=Farias, suffix=prefix=De, prefix=given=Daniela, useprefix=true},
+  author = {family=Pucci, suffix=Farias, prefix=De, given=Daniela, useprefix=true},
   date = {2002},
   institution = {{Stanford University}}
 }
 
 @article{farias2003LP2ADP,
   title = {The {{Linear Programming Approach}} to {{Approximate Dynamic Programming}}},
-  author = {family=Pucci, given=family=Farias, suffix=prefix=De, prefix=given=Daniela, useprefix=true and Van Roy, Benjamin},
+  author = {family=Pucci, suffix=Farias, prefix=De, given=Daniela, useprefix=true and Van Roy, Benjamin},
   date = {2003},
   journaltitle = {Operations Research},
   volume = {51},
@@ -143,6 +143,17 @@
   urldate = {2022-09-01},
   isbn = {978-1-4614-7137-0 978-1-4614-7138-7},
   keywords = {data mining,inference,R,R software,statistical learning,supervised learning,unsupervised learning}
+}
+
+@book{kochenderfer2022,
+  title = {Algorithms for Decision Making},
+  author = {Kochenderfer, Mykel J. and Wheeler, Tim A. and Wray, Kyle H.},
+  date = {2022},
+  publisher = {{Massachusetts Institute of Technology}},
+  location = {{Cambridge}},
+  isbn = {978-0-262-04701-2},
+  langid = {english},
+  keywords = {Algorithms,Decision support systems,Mathematics}
 }
 
 @thesis{louppe2014,
