--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -71,13 +71,12 @@
 \pagestyle{plain}
 \pagenumbering{arabic}
 
-\include{Chapters/Intro}
+% \include{Chapters/Intro}
 
 \part{Foundations}
 \label{part:I}
 
 	% \include{Chapters/Motivation}
-	% \include{Chapters/Stochastic}
 	% \include{Chapters/OptimizationTheory}
 	% \include{Chapters/SupervisedLearning}
 	\include{Chapters/ReinforcementLearning}
@@ -97,6 +96,7 @@
 \addcontentsline{toc}{part}{Appendices}
 
 	% \include{Chapters/MiniopolySim}
+	\include{Chapters/Stochastic}
 
 \nocite{*}
 \printbibliography
