--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -51,6 +51,7 @@
 	citecolor=auroraLila,
 	urlcolor=auroraRed,
 	pdftitle={Tesis Alonso Martinez},
+	breaklinks=true,
 	% pdfpagemode=FullScreen,
 }
 
