--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -19,6 +19,8 @@
 % \tikzexternalize[prefix=tikz/]
 \usepackage{import}
 
+\usepackage{wrapfig}
+
 % Bibliografía
 \usepackage{csquotes}
 \usepackage[
@@ -77,9 +79,9 @@
 \label{part:I}
 
 	% \include{Chapters/Motivation}
-	% \include{Chapters/OptimizationTheory}
+	\include{Chapters/OptimizationTheory}
 	% \include{Chapters/SupervisedLearning}
-	\include{Chapters/ReinforcementLearning}
+	% \include{Chapters/ReinforcementLearning}
 
 \part{Approximate solutions to the Reinforcement Learning Problem}
 \label{part:II}
@@ -91,12 +93,14 @@
 \label{part:III}
 
 	% \include{Chapters/CARTasRLP}
+	% \include{Chapters/ALPBDT}
+
 
 \appendix
 \addcontentsline{toc}{part}{Appendices}
 
 	% \include{Chapters/MiniopolySim}
-	\include{Chapters/Stochastic}
+	% \include{Chapters/Stochastic}
 
 \nocite{*}
 \printbibliography
