Correcciones de Ch Reinforcement Learning

--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -78,29 +78,29 @@
 \part{Foundations}
 \label{part:I}
 
-	\include{Chapters/Motivation}
-	\include{Chapters/OptimizationTheory}
+	% \include{Chapters/Motivation}
+	% \include{Chapters/OptimizationTheory}
 	\include{Chapters/SupervisedLearning}
 	\include{Chapters/ReinforcementLearning}
 
 \part{Approximate solutions to the Reinforcement Learning Problem}
 \label{part:II}
 
-	\include{Chapters/ApproximateLinearP}
-	\include{Chapters/PropertiesGuarantees}
+	% \include{Chapters/ApproximateLinearP}
+	% \include{Chapters/PropertiesGuarantees}
 	
 \part{Applications to Supervised Machine Learning}
 \label{part:III}
 
-	\include{Chapters/CARTasRLP}
-	\include{Chapters/ALPBDT}
+	% \include{Chapters/CARTasRLP}
+	% \include{Chapters/ALPBDT}
 
 
 \appendix
 \addcontentsline{toc}{part}{Appendices}
 
-	\include{Chapters/MiniopolySim}
-	\include{Chapters/Stochastic}
+	% \include{Chapters/MiniopolySim}
+	% \include{Chapters/Stochastic}
 
 \nocite{*}
 \printbibliography
