--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -73,14 +73,14 @@
 \pagestyle{plain}
 \pagenumbering{arabic}
 
-\include{Chapters/Intro}
+% \include{Chapters/Intro}
 
 \part{Foundations}
 \label{part:I}
 
 	% \include{Chapters/Motivation}
 	% \include{Chapters/OptimizationTheory}
-	% \include{Chapters/SupervisedLearning}
+	\include{Chapters/SupervisedLearning}
 	\include{Chapters/ReinforcementLearning}
 
 \part{Approximate solutions to the Reinforcement Learning Problem}
@@ -92,15 +92,15 @@
 \part{Applications to Supervised Machine Learning}
 \label{part:III}
 
-	% \include{Chapters/CARTasRLP}
-	% \include{Chapters/ALPBDT}
+	\include{Chapters/CARTasRLP}
+	\include{Chapters/ALPBDT}
 
 
 \appendix
 \addcontentsline{toc}{part}{Appendices}
 
-	% \include{Chapters/MiniopolySim}
-	% \include{Chapters/Stochastic}
+	\include{Chapters/MiniopolySim}
+	\include{Chapters/Stochastic}
 
 \nocite{*}
 \printbibliography
