Correciones f draft4_corr220915 (Ch.4)

--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -80,8 +80,8 @@
 
 	% \include{Chapters/Motivation}
 	% \include{Chapters/OptimizationTheory}
-	\include{Chapters/SupervisedLearning}
-	% \include{Chapters/ReinforcementLearning}
+	% \include{Chapters/SupervisedLearning}
+	\include{Chapters/ReinforcementLearning}
 
 \part{Approximate solutions to the Reinforcement Learning Problem}
 \label{part:II}
@@ -100,7 +100,7 @@
 \addcontentsline{toc}{part}{Appendices}
 
 	% \include{Chapters/MiniopolySim}
-	% \include{Chapters/Stochastic}
+	\include{Chapters/Stochastic}
 
 \nocite{*}
 \printbibliography
