--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -86,7 +86,7 @@
 \part{Approximate solutions to the Reinforcement Learning Problem}
 \label{part:II}
 
-	% \include{Chapters/ApproximateLinearP}
+	\include{Chapters/ApproximateLinearP}
 	% \include{Chapters/PropertiesGuarantees}
 	
 \part{Applications to Supervised Machine Learning}
@@ -100,7 +100,7 @@
 \addcontentsline{toc}{part}{Appendices}
 
 	% \include{Chapters/MiniopolySim}
-	\include{Chapters/Stochastic}
+	% \include{Chapters/Stochastic}
 
 \nocite{*}
 \printbibliography
