--- a/escrito/FrontBackMatter/Acknowledgments.tex
+++ b/escrito/FrontBackMatter/Acknowledgments.tex
@@ -26,6 +26,6 @@
     \bigskip
 
     Special thanks Arnaud Joly, core developer emeritus of the scikit-learn
-    library, for his assitance in implementing the CART algorithm; and Prof.
+    library, for his assitance in implementing the \ac{cart} algorithm; and Prof.
     Ashwin Rao from Stanford University for pointing me in the right direction.
 }
