Revisiones menores Ch. Rei Learning

--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -149,19 +149,29 @@
 
 \DeclareAcronym{rl}{
 	short = rl,
-	long = Reinforcement Learning
+	long = Reinforcement Learning,
+	short-indefinite = an,
 }
 \DeclareAcronym{ml}{
 	short = ml,
-	long = Machine Learning
+	long = Machine Learning,
+	short-indefinite = an,
+}
+\DeclareAcronym{sml}{
+	short = sml,
+	long = Supervised Machine Learning,
+	short-indefinite = an,
 }
 \DeclareAcronym{cart}{
 	short = cart,
-	long = Classification And Regression Trees
+	long = Classification And Regression Trees,
+	short-indefinite = a,
+	long-indefinite = a
 }
-\DeclareAcronym{md}{
+\DeclareAcronym{mdp}{
 	short = mdp,
-	long = Markov Decission Process
+	long = Markov Decission Process,
+	short-indefinite = an
 }
 
 
