--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -173,6 +173,12 @@
 	long = Markov Decission Process,
 	short-indefinite = an
 }
+\DeclareAcronym{lp}{
+	short = lp,
+	long = Linear Program,
+	short-indefinite = an,
+	long-indefinite = a,
+}
 
 
 \acsetup{
