--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -71,22 +71,23 @@
     UprightFont=*-Regular,
 ]
 
+
 % Language definitions and listings
 \lstdefinelanguage{julia}{
 		morekeywords= [0]{function, if, end, elseif, 
 		@constraint, return, module, export, using, =, copy, 
 		issparse, Matrix, isposdef, inv, zeros, size, findall, 
-		findmin, ones, else, length, I, trues, isfinite., abs., 
+		findmin, ones, else, length, trues, isfinite., abs., 
 		abs, eps, Float64, julia>, julia, println, Bool, rand, 
 		prinln, round, pkg, mutable, struct, Int, Dict, Tuple, 
-	Union, Nothing, Int8, UInt},
+		Union, Nothing, Int8, UInt, Vector, Function, eachindex, for, enumerate},
         morekeywords = [1]{1,2,3,40},
 		sensitive=false,
 		morestring=[s]{"}{"},
 		morecomment=[l]\#,
 		morecomment=[s]{"""}{"""},
 		otherkeywords={*, +, -, \\, ', :, .==, .<=, ./, .>, .!, 
-		.=, .^, .-,.,;, @info, @assert},
+		.=, .^, .-,.,;, @info, @assert, ∈, ->},
 	}
 \lstset{language=julia,
 		basicstyle={\JuliaMono\small \color{nightDarkest}},
@@ -100,6 +101,9 @@
 		commentstyle=\color{auroraGreen},
         keywordstyle = \itshape\color{auroraLila},
         escapeinside={{~}{~}},
+		inputencoding = utf8,
+		extendedchars = true,
+		% literate = {𝒮}{{\'S}}1	{𝒜}{{\'A}}1,
 	}
 
 %=================================================%
@@ -179,10 +183,15 @@
 	short-indefinite = an,
 	long-indefinite = a,
 }
+\DeclareAcronym{alpbdt}{
+	short = alpbdt,
+	long = Approximate Linear Programming Based Decission Trees,
+	short-indefinite = an,
+	long-indefinite = an,
+}
 
 
 \acsetup{
-	index,
 	short-format = \scshape
 }
 
