--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -1,7 +1,7 @@
 \documentclass[colorful]{sty/itam-thesis}
 
 \usepackage[
-		showframe,
+		% showframe,
 		paperwidth=17cm,
 		paperheight=22.5cm,
 		nofoot=true,
@@ -79,33 +79,33 @@
 \pagestyle{plain}
 \pagenumbering{arabic}
 
-% % \include{Chapters/Intro}
-% \include{Chapters/Motivation}
+% \include{Chapters/Intro}
+\include{Chapters/Motivation}
 
 \part{Foundations}
 \label{part:I}
 
-	% \include{Chapters/OptimizationTheory}
-	% \include{Chapters/SupervisedLearning}
-	% \include{Chapters/ReinforcementLearning}
+	\include{Chapters/OptimizationTheory}
+	\include{Chapters/SupervisedLearning}
+	\include{Chapters/ReinforcementLearning}
 
 \part{Approximate solutions to the Reinforcement Learning Problem}
 \label{part:II}
 
-	% \include{Chapters/ApproximateLinearP}
-	% \include{Chapters/PropertiesGuarantees}
+	\include{Chapters/ApproximateLinearP}
+	\include{Chapters/PropertiesGuarantees}
 	
 \part{Applications to Supervised Machine Learning}
 \label{part:III}
 
-	% \include{Chapters/CARTasRLP}
-	\include{Chapters/ALPBDT}
+	\include{Chapters/CARTasRLP}
+	% \include{Chapters/ALPBDT}
 
 \appendix
 \addcontentsline{toc}{part}{Appendices}
 
-	% \include{Chapters/MiniopolySim}
-	% \include{Chapters/Stochastic}
+	\include{Chapters/MiniopolySim}
+	\include{Chapters/Stochastic}
 
 \nocite{*}
 \printbibliography
