--- a/escrito/refs.bib
+++ b/escrito/refs.bib
@@ -129,3 +129,21 @@ author = {Schweitzer, Paul J. and Seidmann, Abraham},
 	date         = 2002,
 	institution  = {Stanford University}
 }
+
+@misc{caglar22,
+  doi = {10.48550/ARXIV.2210.05189},
+  
+  url = {https://arxiv.org/abs/2210.05189},
+  
+  author = {Aytekin, Caglar},
+  
+  keywords = {Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {Neural Networks are Decision Trees},
+  
+  publisher = {arXiv},
+  
+  year = {2022},
+  
+  copyright = {Creative Commons Attribution Non Commercial Share Alike 4.0 International}
+}
