Correciones finales de Andreas

--- a/escrito/BachelorsThesis.bib
+++ b/escrito/BachelorsThesis.bib
@@ -23,7 +23,6 @@
   pages = {2704},
   publisher = {{The Open Journal}},
   doi = {10.21105/joss.02704},
-  url = {https://doi.org/10.21105/joss.02704}
 }
 
 @book{breiman2017,
@@ -73,7 +72,6 @@
   publisher = {{Springer}},
   location = {{New York, NY}},
   doi = {10.1007/978-0-387-84858-7},
-  url = {http://link.springer.com/10.1007/978-0-387-84858-7},
   urldate = {2022-09-01},
   isbn = {978-0-387-84857-0 978-0-387-84858-7},
   keywords = {Averaging,Boosting,classification,clustering,data mining,machine learning,Projection pursuit,Random Forest,supervised learning,Support Vector Machine,unsupervised learning}
@@ -124,7 +122,6 @@
   pages = {15--17},
   issn = {0020-0190},
   doi = {10.1016/0020-0190(76)90095-8},
-  url = {https://www.sciencedirect.com/science/article/pii/0020019076900958},
   urldate = {2022-09-06},
   langid = {english},
   keywords = {Binary decision trees,computational complexity,NP-complete}
@@ -139,7 +136,6 @@
   publisher = {{Springer}},
   location = {{New York, NY}},
   doi = {10.1007/978-1-4614-7138-7},
-  url = {http://link.springer.com/10.1007/978-1-4614-7138-7},
   urldate = {2022-09-01},
   isbn = {978-1-4614-7137-0 978-1-4614-7138-7},
   keywords = {data mining,inference,R,R software,statistical learning,supervised learning,unsupervised learning}
@@ -236,7 +232,6 @@
   number = {6419},
   pages = {1140--1144},
   doi = {10.1126/science.aar6404},
-  url = {https://www.science.org/doi/abs/10.1126/science.aar6404}
 }
 
 @inproceedings{sklearn_api,
@@ -280,23 +275,23 @@
   primaryclass = {cs},
   pages = {785--794},
   doi = {10.1145/2939672.2939785},
-  url = {http://arxiv.org/abs/1603.02754},
   urldate = {2022-09-05},
   archiveprefix = {arXiv},
   keywords = {Computer Science - Machine Learning}
 }
 
-@article{xiong,
+@inproceedings{xiong,
   title = {Learning {{Decision Trees}} with {{Reinforcement Learning}}},
   author = {Xiong, Zheng and Zhang, Wenpeng and Zhu, Wenwu},
+  year = {2017},
   pages = {5},
+  booktitle={NIPS Workshop on Meta-Learning},
   langid = {english}
 }
 
 @misc{caglar22,
   doi = {10.48550/ARXIV.2210.05189},
   
-  url = {https://arxiv.org/abs/2210.05189},
   
   author = {Aytekin, Caglar},
   
