--- a/escrito/FrontBackMatter/Acknowledgments.tex
+++ b/escrito/FrontBackMatter/Acknowledgments.tex
@@ -17,11 +17,10 @@
     Put your acknowledgments here.
 
     To acknowledge:
-    - Gente
-    - Julia
-    - Style of the book inspired by Tufte and Open Logic Project
-    - Color theme Nord by
-    - Open source projects
+    \begin{itemize}
+        \item Gente
+        \item Open source projects
+    \end{itemize}
 
     \bigskip
 
