--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -1,7 +1,7 @@
 \documentclass[colorful]{sty/itam-thesis}
 
 \usepackage[
-		showframe,
+		% showframe,
 		paperwidth=17cm,
 		paperheight=22.5cm,
 		nofoot=true,
