--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -261,7 +261,7 @@
 	{
 		colback=white, % Inside color of content box
 		colframe=frostMidBlue, % Outer box frame color
-		fonttitle=\bfseries\scshape, % font title style
+		fonttitle={\bfseries\scshape \hypersetup{hidelinks}}, % font title style
 		enhanced,
 		coltitle=snowLight, % Title font color
 		attach boxed title to top left={
@@ -278,7 +278,7 @@
 	{
 		colback=white, % Inside color of content box
 		colframe=auroraLila, % Outer box frame color
-		fonttitle=\bfseries\scshape, % font title style
+		fonttitle={\bfseries\scshape \hypersetup{hidelinks}}, % font title style
 		enhanced,
 		coltitle=snowLight, % Title font color
 		attach boxed title to top left={
@@ -295,7 +295,7 @@
 	{
 		colback=white, % Inside color of content box
 		colframe=auroraRed, % Outer box frame color
-		fonttitle=\bfseries\scshape, % font title style
+		fonttitle={\bfseries\scshape \hypersetup{hidelinks}}, % font title style
 		enhanced,
 		coltitle=snowLight, % Title font color
 		attach boxed title to top left={
