--- a/escrito/FrontBackMatter/Abstract.tex
+++ b/escrito/FrontBackMatter/Abstract.tex
@@ -1,5 +1,39 @@
 \addcontentsline{toc}{chapter}{Abstract}
 
+\chapter*{Resumen}
+En las últimas décadas avances en el campo conocido como Inteligencia Artificial
+han cambiado el panorama de que problemas tienen y no tienen solución. Problemas
+como procesamiento de lenguaje natural, reconocimiento de imágenes y otros,
+ahora es posible resolver y son utilizados en nuestro día a día. Estos avances
+se han dado gracias a la sinergia entre las Matemáticas y las Ciencias de la
+Computación.
+
+Estas herramientas pasaron de ser problemas abiertos en a investigación, a ser
+problemas de ingeniería que se resuelven a escala día tras día. Una gran parte
+de las personas involucradas en la implementación de estas soluciones tienen
+conocimiento limitado sobre los conceptos matemáticos que subyacen la práctica
+que llevan a cabo, lo cual es natural dado que no es conocimiento esencial para
+sus tareas cotidianas. Esta tésis es un esfuerzo por explorar la teoría y las
+intuiciones detrás de una de las técnicas más novedosas de la Inteligencia
+Artificial: Aprendizaje por Refuerzo (\textsc{rl} por sus siglas en inglés).
+Esta tesis busca sentar las bases en Procesos Estocásticos, Probabilidad, y
+Optimización que dan el trasfondo para entender el aprendizaje por refuerzo. Se
+busca presentar el contenido de manera intuitiva sin dejar de lado el rigor
+matemático. Como matemático siento una obligación por presentar el campo de
+estudio con la belleza que percibimos quienes lo estudiamos.
+
+Esta tesis está compuesta por capítulos divididos en tres partes. La primera
+parte presenta las ideas fundamentales de los diferentes campos de las
+matemáticas que son esenciales para el aprendizaje por refuerzo, y una corta
+introducción al campo del aprendizaje de máquina supervisado. La segunda parte
+presenta en concreto lo que llamaremos el \emph{problema de aprendizaje por
+refuerzo} en términos de un problema matemático, y desarrollamos la teoría que
+permite dar soluciones aproximadas a este problema explicando porqué son de
+interés. La tercera y última parte establece la conexión entre el aprendizaje de
+máquina supervisado con el aprendizaje por refuerzo, y propone un algoritmo
+basado en las soluciones aproximadas que son el foco principal de esta tésis al
+problema de ajuste de árboles de decisión.
+
 \chapter*{Abstract}
 In the last 20 or so years, several advancements and novel techniques have
 transformed the landscape of the discipline we currently call Artificial
@@ -15,24 +49,11 @@ solutions based on Artificial Intelligence today have limited knowledge of the
 mathematical underpinnings that enable such powerful methods, for they do not 
 need it to do their job. This thesis represents an effort to explore the theory
 and intuitions behind one of the most innovative techniques in Artificial
-Intelligence: \ac{rl}. This work aims to explore the key ideas in
+Intelligence: \acf{rl}. This work aims to explore the key ideas in
 the areas of mathematics that provide the foundations for Reinforcement
 Learning: Stochastic Processes, Probability Theory, and a particular emphasis on
 Mathematical Optimization, so the field and problems can be presented in an
-engaging fashion while sacrificing as little clarity as possible. Then, some 
-selected problems and applications will be presented to illustrate the power of
-the techniques the reader has become acquainted to. 
-
-As a mathematician, I feel a special obligation to share the beauty of the ideas
-in our field with those outside of it. To that end, to make this work more
-enjoyable to the people I dedicate it to, I try to emulate a more leisurely
-style than the one found in research papers.  Some terseness will be sacrificed
-in favor of clarity. Nevertheless, the mathematical minutia will not be ``swept
-under the rug'' or separated from the main body of text. Instead, I will try to
-give context to the development of mathematical ideas while not insisting on
-subjecting the reader to every single technical detail necessary for the
-formality of the arguments. The involved details will be available to those
-curious in the appendixes.
+engaging fashion while sacrificing as little clarity as possible.
 
 This thesis consists of mainly three parts, and several chapters that make up
 said parts. The first part presents the main ideas from the different fields of
@@ -41,11 +62,3 @@ mathematics that will be needed to motivate and justify the theory behind
 problems as a matter of Mathematics and how these problems are solved through
 different optimization techniques. The third and final part deals with
 applications of \ac{rl}.
-
-Interspersed among the purely mathematical theory are examples of how these
-ideas are expressed in the \href{https://julialang.org/}{Julia Programming
-Language}. These code snippets will be primarily self-contained, ready to run
-and leverage the vast ecosystem that makes Julia ideal for Mathematics and
-Scientific disciplines. Some code examples will play the role of pseudo-code as
-Julia's simple syntax allows the mathematical ideas to shine through the
-implementation details.
