Fixing short-format acro

--- a/escrito/FrontBackMatter/Abstract.tex
+++ b/escrito/FrontBackMatter/Abstract.tex
@@ -58,7 +58,10 @@ engaging fashion while sacrificing as little clarity as possible.
 This thesis consists of mainly three parts, and several chapters that make up
 said parts. The first part presents the main ideas from the different fields of
 mathematics that will be needed to motivate and justify the theory behind
-\ac{rl}. The second part explores the \ac{rl}
-problems as a matter of Mathematics and how these problems are solved through
-different optimization techniques. The third and final part deals with
-applications of \ac{rl}.
+\ac{rl}, along with a brief introduction to the field of Supervised Machine
+Learning. The second part develops the titular component of this thesis:
+approximate solutions to the Reinforcement Learning Problem, motivating reasons
+why approximations are desireable. Lastly, the third part motivates the framing
+of an important problem in Supervised Machine Learning, the fitting of decission
+trees, as a Reinforcement Learning Problem and proposes an algorithm based on
+the approximate solutions developed earlier.
