--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -157,50 +157,54 @@
 	short = rl,
 	long = Reinforcement Learning,
 	short-indefinite = an,
+	short-format = \scshape
 }
 \DeclareAcronym{ml}{
 	short = ml,
 	long = Machine Learning,
 	short-indefinite = an,
+	short-format = \scshape
 }
 \DeclareAcronym{sml}{
 	short = sml,
 	long = Supervised Machine Learning,
 	short-indefinite = an,
+	short-format = \scshape
 }
 \DeclareAcronym{cart}{
 	short = cart,
 	long = Classification And Regression Trees,
 	short-indefinite = a,
-	long-indefinite = a
+	long-indefinite = a,
+	short-format = \scshape
 }
 \DeclareAcronym{mdp}{
 	short = mdp,
 	long = Markov Decission Process,
-	short-indefinite = an
+	short-indefinite = an,
+	short-format = \scshape
 }
 \DeclareAcronym{lp}{
 	short = lp,
 	long = Linear Program,
 	short-indefinite = an,
 	long-indefinite = a,
+	short-format = \scshape
 }
 \DeclareAcronym{rlbdt}{
 	short = rlbdt,
 	long = Reinforcement Learning Based Decission Trees,
 	short-indefinite = an,
+	short-format = \scshape
 }
 \DeclareAcronym{alpbdt}{
 	short = alpbdt,
 	long = Approximate Linear Programming Based Decission Trees,
 	short-indefinite = an,
 	long-indefinite = an,
-}
-
-
-\acsetup{
 	short-format = \scshape
 }
+
 
 %=================================================%
 % Math Operators, Delimiters & Math-mode commands %
