--- a/escrito/FrontBackMatter/Dedication.tex
+++ b/escrito/FrontBackMatter/Dedication.tex
@@ -3,9 +3,7 @@
 \vspace*{3cm}
 
 \begin{center}
-    \emph{Ohana} means family. \\
-    Family means nobody gets left behind, or forgotten. \\ \medskip
-    --- Lilo \& Stitch
+    Por escribir
 \end{center}
 
 \medskip
